# django-xicon
# setup.cfg


[mypy]
files=xicon
ignore_missing_imports=true


[flake8]
max-line-length = 120
select = B,C,E,F,W,T4


[metadata]
name = django-xicon
version = 0.0.0
description = django reusable application to handle modern bunch of site icons
python_requires = 3.7
license_file = COPYING
author = Alexei Andrushievich
author_email = vint21h@vint21h.pp.ua
url = https://github.com/vint21h/django-xicon/
classifiers =
    "Environment :: Plugins",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
    "Framework :: Django :: 2.2",
License = GPLv3
long_description = file:README.rst
long_description_content_type = text/x-rst


[options]
packges = find:
zip_safe = False
include_package_data = True
install_requires =
    django
packages = django-xicon


[wheel]
universal = 1
